--- a/web/app/themes/kleanhub/style.css
+++ b/web/app/themes/kleanhub/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name:         Sage Starter Theme
-Theme URI:          https://roots.io/sage/
-Description:        Sage is a WordPress starter theme.
-Version:            11.0.1
-Author:             Roots
-Author URI:         https://roots.io/
+Theme Name:         KleanHub Theme
+Theme URI:          https://kleanhub.com.au/
+Description:        Cleaning Services - Melbourne-wide - KleanHub.
+Version:            1.0.0
+Author:             Milton Pena
+Author URI:         https://au.linkedin.com/in/miltonpena
 Text Domain:        sage
 License:            MIT License
 License URI:        https://opensource.org/licenses/MIT
