--- a/web/app/themes/kleanhub/resources/css/brand/theme.css
+++ b/web/app/themes/kleanhub/resources/css/brand/theme.css
@@ -6,7 +6,6 @@
   --breakpoint-xl: 80rem;   /* 1280px */
   --breakpoint-2xl: 96rem;  /* 1536px */
   --breakpoint-3xl: 120rem; /* 1920px */
-
   /* Containers */
   --container-size-sm: 40rem;   /* 640px */
   --container-size-md: 48rem;   /* 768px */
@@ -14,7 +13,6 @@
   --container-size-xl: 80rem;   /* 1280px */
   --container-size-2xl: 90rem;  /* 1440px */
   --container-size-3xl: 90rem; /* 1440px */
-
   /* Fonts */
   --font-sans: 'Satoshi', ui-sans-serif, system-ui, sans-serif;
   --font-serif: "Merriweather", serif;
@@ -29,11 +27,11 @@
   --color-anti-white: oklch(0.9649 0.0011 17.18); /* #f4f3f3 */
   --color-anti-white-100: oklch(0.9581 0 0); /* #F1F1F1 */
   --color-cultured: oklch(0.9731 0 0); /* #f6f6f6 */
+  --color-chinese-black: oklch(0.1985 0.0204 239.61); /* #0D171E */
+  --color-light-silver: oklch(0.877 0.0096 222.07); /* #D0D8DB */
   /* Colors Opacity */
   --color-light-blue-o: oklch(0.9715 0.0167 230.9 / 85.1%); /* #EBF8FFD9 */
   --color-black-o: oklch(0 0 0 / 85%); /* rgba(0, 0, 0, 0.85) */
-
-
   /* Colors Palette */
   --color-primary: var(--color-blue);
 }
