--- a/web/app/themes/kleanhub/resources/css/editor.css
+++ b/web/app/themes/kleanhub/resources/css/editor.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+.wp-block.wp-block-post-title {
+  padding: 0 1rem;
+}
+
+.wp-block,
+.block-editor-block-list__layout .wp-block {
+  margin-bottom: 2rem;
+}
