--- a/web/app/themes/kleanhub/resources/css/editor.css
+++ b/web/app/themes/kleanhub/resources/css/editor.css
@@ -8,3 +8,7 @@
 .block-editor-block-list__layout .wp-block {
   margin-bottom: 2rem;
 }
+
+.block-editor-block-list__layout.is-root-container > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+  max-width: 60rem !important;
+}
