Updates content cards and image banner block

--- a/web/app/themes/kleanhub/resources/css/app.css
+++ b/web/app/themes/kleanhub/resources/css/app.css
@@ -10,5 +10,8 @@
 @import './sections/header.css';
 @import './sections/footer.css';
 
+/* Blocks */
+@import './blocks/content-cards.css';
+
 @source "../views/";
 @source "../../app/";
