Update testimonial block

--- a/web/app/themes/kleanhub/resources/css/app.css
+++ b/web/app/themes/kleanhub/resources/css/app.css
@@ -12,6 +12,7 @@
 
 /* Blocks */
 @import './blocks/content-cards.css';
+@import './blocks/testimonials.css';
 
 @source "../views/";
 @source "../../app/";
