--- a/web/app/themes/kleanhub/resources/css/brand/base.css
+++ b/web/app/themes/kleanhub/resources/css/brand/base.css
@@ -12,33 +12,40 @@
     -moz-osx-font-smoothing: auto; /* Firefox on macOS */
   }
 
-  h1 {
+  h1,
+  .h1{
     @apply text-[32px] mb-4 font-bold;      /* mobile */
   }
 
   @media (min-width: 48rem) { /* md breakpoint */
-    h1 {
+    h1,
+    .h1 {
       @apply text-[40px];    /* desktop */
     }
   }
 
-  h2 {
+  h2,
+  .h2 {
     @apply text-[28px] mb-4 font-bold;
   }
 
-  h3 {
+  h3,
+  .h3 {
     @apply text-[24px] mb-4 font-bold;
   }
 
-  h4 {
+  h4,
+  .h4  {
     @apply text-[20px] mb-4 font-bold;
   }
 
-  h5 {
+  h5,
+  .h5  {
     @apply text-[20px] mb-4 font-medium;
   }
 
-  h6 {
+  h6,
+  .h6 {
     @apply text-base mb-4 font-bold;
   }
 
