Update gallery slider block

--- a/web/app/themes/kleanhub/resources/css/app.css
+++ b/web/app/themes/kleanhub/resources/css/app.css
@@ -13,6 +13,7 @@
 /* Blocks */
 @import './blocks/content-cards.css';
 @import './blocks/testimonials.css';
+@import './blocks/gallery-slider.css';
 
 @source "../views/";
 @source "../../app/";
