Update details contact and form blocks

--- a/web/app/themes/kleanhub/resources/css/app.css
+++ b/web/app/themes/kleanhub/resources/css/app.css
@@ -14,6 +14,8 @@
 @import './blocks/content-cards.css';
 @import './blocks/testimonials.css';
 @import './blocks/gallery-slider.css';
+@import './blocks/contact.css';
+@import './blocks/form.css';
 
 @source "../views/";
 @source "../../app/";
